apps/base/customer1/waitlist-api/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: waitlist-api-route
  namespace: customer1
spec:
  parentRefs:
  - name: external-http-gateway
  hostnames:
  - "sirius-sec.com"
  - "www.sirius-sec.com"
  - "agentforge.ai"
  - "www.agentforge.ai"
  rules:
    - matches:
      - path:
          type: PathPrefix
          value: /api/waitlist
      backendRefs:
      - name: waitlist-api-svc
        port: 80
